# cloudylist

./: .coveragerc  Dockerfile  README.md  Taskfile.yml  config.yml  pyproject.toml  setup.cfg
.github/workflows/: docker-build-test.yaml
cloudylist/: main.py  utils.py
cloudylist/resources/: ec2.py  rds.py  s3.py
tests/: conftest.py  test_main.py  test_plugins.py  test_resources.py  test_utils.py
